# discord-bot

./: .gitignore  pyproject.toml  requirements.txt
src/: bot.py
